src/base/objects/Bill__c/Bill__c.object-meta.xml
<CustomObject>
    <description>This is a custom object to represent the bills associated with each of our accounts.</description>
    <label>Bill</label>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>