src/base/objects/Bill__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>This is the Account to which this Bill belongs.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bills</relationshipLabel>
    <relationshipName>Bills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>