src/base/objects/Bill__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Billing Contact</description>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bills</relationshipLabel>
    <relationshipName>Bills</relationshipName>
    <type>Lookup</type>
</CustomField>