src/base/objects/Bill__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>The frequency at which this bill comes due.</description>
    <inlineHelpText>If the billing frequency is non-standard, be sure to make note of the details in the Special Terms field.</inlineHelpText>
    <label>Billing Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Non-Standard (Make Note)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>