src/base/objects/Bill__c/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <description>This is the date that billing should begin.</description>
    <inlineHelpText>This is the date that billing should begin.</inlineHelpText>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>