src/base/objects/Bill__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bills</relationshipLabel>
    <relationshipName>Bills</relationshipName>
    <type>Lookup</type>
</CustomField>