src/base/objects/Bill__c/fields/Paid_in_Stable_Coin__c.field-meta.xml
<CustomField>
    <fullName>Paid_in_Stable_Coin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this bill will be paid in stable coin.</description>
    <inlineHelpText>Check if this bill will be paid in stable coin.</inlineHelpText>
    <label>Paid in Stable Coin</label>
    <type>Checkbox</type>
</CustomField>