src/base/objects/Bill__c/fields/Pays_Gas_Fees__c.field-meta.xml
<CustomField>
    <fullName>Pays_Gas_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the customer is responsible for paying gas fees. This will be noted on their MSA/Order Form.</inlineHelpText>
    <label>Pays Gas Fees</label>
    <type>Checkbox</type>
</CustomField>