src/base/objects/Bill__c/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <description>Any special terms associated with this bill.</description>
    <label>Special Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>