src/base/objects/Bill__c/fields/Start_Date_Pending__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if the billing start date is unknown at this time.</description>
    <inlineHelpText>Check this if the billing start date is unknown at this time.</inlineHelpText>
    <label>Start Date Pending</label>
    <type>Checkbox</type>
</CustomField>