src/base/objects/Bill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Billing_Start_Date__c</columns>
    <columns>Billing_Frequency__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Bison_Team</group>
    </sharedTo>
</ListView>